# ghas-policy-as-code

./: .gitignore  README.md  action.yml  main.py  package-lock.json  package.json  policy.yaml  pyproject.toml
.github/workflows/: secret-scanning-action.yml  test-action.yml
src/: main.js  main.ts
tests/: test_main.js  test_main.py  test_main.test.js
