[tool.poetry]
name = "github-secret-scanning-action"
version = "0.1.0"
description = "A GitHub Action to scan for secret scanning alerts and block PRs if necessary."

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pyyaml = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
